Space alignment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -259,7 +259,7 @@ p{
 .section .heading .icon.color-white{ color: #fff; }
 
 .w-detail p{
-    text-shadow: 1px 2px 1px rgba(0,0,0,0.3);
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
 }
 .section .margin-bottom{ margin-bottom: 30px; }
 .wedding-details p{
@@ -269,7 +269,6 @@ p{
 .w-detail-font-icon-color{
     color: #00BCD4;
     opacity: 0.6;
-    font-weight: bold !important;
 }
 
 /*-----------------  WEDDING DETAILS AREA END -----------------*/
@@ -496,7 +495,7 @@ section{
 /*-------------------Media Queries Mobile View --------------------------*/
 @media (max-width: 768px) {
     .header-title{
-        font-size: 0.7em;
+        font-size: 1em;
     }
     .body-margin{
         margin: 5px 0px;
@@ -509,7 +508,7 @@ section{
         padding: 8px 0;
     }
     .banner-couple-name{
-        font-size: 2.2em;
+        font-size: 2.5em;
     }
     .banner-holding-hand-margin{
         margin-top: 0 !important;
@@ -518,13 +517,13 @@ section{
         margin-left: 0 !important;
     }
     .banner-couple-description{
-        font-size: 0.9em;
+        font-size: 1.12em;
     }
     .banner-couple-small-font{
-        font-size: 0.7em;
+        font-size: 0.9em;
     }
     .banner-date-font{
-        font-size: 0.8em;
+        font-size: 1em;
     }
     .profile-card {
         background: white;
@@ -541,7 +540,7 @@ section{
         padding-top: 1.3em;
     }
     .timer-content{
-        font-size: 0.8em;
+        font-size: 1em;
     }
     .counter-clockinner .counter-smalltext{
         font-size: 0.7em;
@@ -569,7 +568,7 @@ section{
         padding-bottom: 1em;
     }
     .wedding-detail-subtitle{
-        font-size: 0.8em;
+        font-size: 0.97em;
     }
     .w-detail{
         padding: 0 15px;
@@ -578,22 +577,22 @@ section{
         font-size: 1.3em;
     }
     .wedding-details-content{
-        font-size: 0.85em !important;
+        font-size: 0.95em !important;
     }
     .welcome-area-content-font{
-        font-size: 0.8em;
+        font-size: 0.9em;
     }
     .most-welcome-font{
         font-size: 1.2em;
     }
     .map-container-heading{
-        font-size: 1.27em;
+        font-size: 1.47em;
     }
     .mahal-place-text{
-        font-size: 1em;
+        font-size: 1.2em;
     }
     .mahal-address-text{
-        font-size: 0.95em;
+        font-size: 1.1em;
     }
     iframe{
         height: 270px;
@@ -602,7 +601,7 @@ section{
         margin-top: 20px;
     }
     .footer-contact-font-size{
-        font-size: 0.6em;
+        font-size: 0.67em;
         padding: 0 !important;
     }
     .footer-rasigan-font{
@@ -649,7 +648,7 @@ section{
         width: 280px;
     }
     .profile-card-couple-name {
-        font-size: 1.6em;
+        font-size: 1.8em;
     }
     .banner-name-padding-top{
         padding-top: 15px;
